[package]
name = "lsled"
version = "0.6.6"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lua-shared = {git = "http://git.thetha.wtf/ivogel/lua-shared.git"}
sled = "0.34.7"
bincode = "1.3.3"
serde = "1.0.139"
paste = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
